markup, fix indentation issues, nested lists, etc.  Working from most
recent to oldest, I've edited back to release 110.46 (2004/06/17).

//////////////////////////////////////////////////////////////////////

//====================================================================
//== Recent updates

//--------------------------------------------------------------------
[2017/09/18]::
+
Removed FLINT primops (and their CPS counterparts) that are not
in the +InlineT+ structure and, thus, are never used by the compiler.
+
owner:[John Reppy,http://cs.uchicago.edu/~jhr]

//--------------------------------------------------------------------
[2017/09/18]::
+
Fixed bug bugref:[123] (missing nonexhaustive bind warning). The +mkVBs+
function in +FLINT/trans/translate.sml++ was adding a redundant default
rule by calling ++ElabUtil.completeMatch++ after a default rule had
already been explicitly added to the match for let bindings.
+
owner:[David MacQueen,http://cs.uchicago.edu/~dbm]

//--------------------------------------------------------------------
[2017/09/18]::
+
Fixed bug bugref:[183] (status code returned by sml REPL).  This fix
restores the version 110.79 behavior of having +sml foo.sml+ exit with
a non-zero status when there is a type-checking error in ++foo.sml++.
It also cleans up the error messages associated with +use+ when there
is a syntax error.
+
owner:[John Reppy,http://cs.uchicago.edu/~jhr]

//--------------------------------------------------------------------
[2017/08/28]::
+
Fixed bug bugref:[185] (Bring command line help text into parity with man page).
Added missing options (++@SMLversion++ and ++@SMLsuffix++) to the
help message that is printed for the command "++sml -h++".  Also
adjusted the order of options in the help message, and in the man
page, so that the orders match.
+
owner:[John Reppy,http://cs.uchicago.edu/~jhr]

//--------------------------------------------------------------------
[2017/08/12]::
+